Revision history for Perl module CPAN::Reporter::Smoker

0.16 Sat Sep 20 08:54:49 EDT 2008

    - Added: 'list' argument to specify a particular list of distributions
      to test instead of testing all of CPAN in reverse order

    - Changed: sets PERL_EXTUTILS_AUTOINSTALL=--defaultdeps environment
      variable for automatic handling of Auto Install dependency

0.15 Sun Jun 22 23:53:26 EDT 2008

    - Test fixed: smoke.t and smoke-restart.t no longer fail if PERL5OPT is
      set (as by CPAN::Reporter dev releases)

0.14 Wed Jun 18 19:13:27 EDT 2008

    - Fixed: localizing CPAN config was causing some segfaults on 5.6.2;
      removed the call to local() as a workaround

0.13 Tue Jun 10 22:38:15 EDT 2008

    - Fixed: under build_dir_reuse, be sure to regenerate build dirs before
      calling reset_tested

0.12 Tue Jun  3 11:52:49 EDT 2008

    - Added: 'status_file' argument used to record distribution being
      tested into a file; helps in determining which distribution is at
      fault if testing some distribution crashes or hangs the computer
    
    - Added: shows count of distributions found when index is processed
      and number of the current distribution being tested

    - Changed: CPAN::Reporter history is cached at startup for faster 
      processing of distributions already tested
    
0.11 Sat May 17 11:59:08 EDT 2008

    - Documented: support for 'build_dir_reuse' is experimental and needs
      CPAN 1.92_62 (as yet unreleased) to work properly
    
0.10 Fri May 16 08:27:47 EDT 2008

    - Added: 'clean_cache_after' argument to have CPAN clean its build cache
      after a certain number of distributions are smoked (default 100)

    - Added: 'set_term_title' boolean argument to control whether the terminal
      title is updated or not (default 1)

    - Changed: if CPAN config option 'build_dir_reuse' is true and CPAN has
      the 'reset_tested' method, then 'reset_tested' will be called prior