@@ -24,6 +24,7 @@ requires:
   Module::Build: 0.28
   Probe::Perl: 0.01
   Term::Title: 0.01
+  Test::Reporter: 1.52
   perl: 5.006
 build_requires:
   Cwd: 3.27
