@@ -631,21 +631,6 @@ additional dependencies and so on.  Read the docs for CPAN.pm for more and
 look in the "distroprefs" directory in the CPAN distribution tarball for
 examples.
 
-== Turning off reports to authors 
-
-CPAN::Reporter (since 1.08) supports skipfiles to avoid copying certain authors
-on failing reports or to prevent sending a report at all to CPAN Testers.  Use
-these to stop sending reports if someone complains.  See
-[CPAN::Reporter::Config] for more details.
-
-Note -- these do not stop CPAN::Reporter::Smoker from processing distributions.
-They only change whether reports are sent and to whom.
-
-If you don't want to copy authors at all, set the "cc_author" option
-to "no" in your CPAN::Reporter config file.
-
-    cc_author = no
-
 == Using a local CPAN::Mini mirror
 
 Because distributions must be retrieved from a CPAN mirror, the smoker may
@@ -764,11 +749,19 @@ minimize some of the clutter to the screen as distributions are tested.
     cpan> o conf init /verbosity/
     cpan> o conf commit
 
-== Test::Reporter timeouts and MAILDOMAIN
+== Saving reports to files instead of sending directly
 
-On some systems (e.g. Win32), Test::Reporter may take a long time to determine
-the origin domain for mail.  Set the MAILDOMAIN environment variable instead to
-avoid this delay.
+In some cases, such as when smoke testing using a development or prerelease
+toolchain module like Test-Harness, it may be prefereable to save reports to
+files in a directory for review prior to submitting them.  To do this,
+manually set the {transport} option in your CPAN::Reporter config file to use
+the [Test::Reporter::Transport::File] transport.
+
+    transport=File /path/to/directory
+
+After review, send saved reports using Test::Reporter:
+
+    Test::Reporter->new()->read($filename)->send()
 
 = ENVIRONMENT
 
