@@ -8,6 +8,8 @@ Revision history for Perl module CPAN::Reporter::Smoker
     - Changed: sets PERL_EXTUTILS_AUTOINSTALL=--defaultdeps environment
       variable for automatic handling of Auto Install dependency
 
+    - Changed: bumped up the CPAN::Reporter and Test::Reporter prereqs
+
 0.15 Sun Jun 22 23:53:26 EDT 2008
 
     - Test fixed: smoke.t and smoke-restart.t no longer fail if PERL5OPT is
